# xray2junit

./: Cargo.toml  README.md  header.tape  test.json
.chglog/: config.yml
.github/workflows/: build_and_release.yaml  foo.yaml
src/: cli.rs  convert.rs  format.rs  lib.rs  main.rs
