[package]
name = "xray2junit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
junit-report = "0.8"
clap = { version = "4.1.8", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
